# bottlerocket

sources/api/early-boot-config/src/: main.rs
sources/models/src/ouchi/: mod.rs  override-defaults.toml
variants/ouchi/: Cargo.toml
