[package]
name = "ouchi"
version = "0.1.0"
edition = "2018"
publish = false
build = "build.rs"
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[package.metadata.build-variant]
included-packages = [
# core
    "release",
# tools
    "findutils",
    "login",
    "iputils",
    "procps",
    "strace",
    "tcpdump",
    "chrony-tools",
# kube
    "cni",
    "cni-plugins",
    "ouchikubelet-1.20",
]

[lib]
path = "lib.rs"
